--- a/assets/package.json
+++ b/assets/package.json
@@ -1,20 +1,25 @@
 {
-  "scripts": {
-    "build": "esbuild assets/js/app.js --bundle --outdir=../priv/static/js --loader:.js=jsx --minify",
-    "deploy": "npm run build && phx.digest"
-  },
-  "dependencies": {
-    "@babel/preset-react": "^7.26.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ]
-  },
-  "devDependencies": {
-    "esbuild": "^0.25.2"
-  }
+    "scripts": {
+        "deploy": "esbuild js/app.js --bundle --outdir=../priv/static/assets --loader:.js=jsx --minify"
+    },
+    "dependencies": {
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.26.10",
+        "@babel/preset-env": "^7.26.9",
+        "@babel/preset-react": "^7.26.3",
+        "autoprefixer": "^10.4.21",
+        "babel-loader": "^10.0.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.0"
+    },
+    "name": "assets",
+    "version": "1.0.0",
+    "main": "postcss.config.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
